test_case/rust-lang_rust/56804_447509976.rs
Rust
fn main() {
    let mut x = None;
    x = Some(Box::new(x)); //~ ERROR mismatched types
    //~| cyclic type of infinite size
}
